[package]
name = "btree_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.157", features = ["derive"] }
rand = "0.8.5"
slotmap = { version = "1.0", features = ["serde"] }
#tailcall = "0.1.6"

[profile.dev]
opt-level = 1
overflow-checks = true
debug = true
debug-assertions = true
lto = false
incremental = false
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false